# plantuml-csa-mcp-server

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/completed-plans/: implementation-plan.md
src/: __init__.py  __main__.py  server.py
src/bootstrap/: __init__.py  csa_bootstrap.py
src/converter/: __init__.py  layout_hints.py  sprites.py  topology_to_puml.py
src/encoder/: __init__.py  plantuml_encoder.py
src/models/: __init__.py  csa_topology.py
src/renderer/: __init__.py  plantuml_runner.py
src/templates/: __init__.py  architecture_templates.py
tests/: __init__.py  test_bootstrap.py  test_encoder.py  test_sprites.py  test_topology_conversion.py
tests/fixtures/: sample_topology.yaml
